Fixed Spacing Bug

--- a/src/pages/Home/EventInfo/styles.module.scss
+++ b/src/pages/Home/EventInfo/styles.module.scss
@@ -11,6 +11,14 @@
     margin-left: 0%;
     margin-right: 0%;
     top: 5%;
+
+    @media screen and (max-width: 1200px) {
+      margin-right: 8%;
+    }
+
+    @media screen and (max-width: 767px) {
+      margin-right: 10%;
+    }
   }
 
   .content {
