--- a/src/pages/Home/FAQ/styles.module.scss
+++ b/src/pages/Home/FAQ/styles.module.scss
@@ -11,6 +11,7 @@
     margin-top: 5%;
     margin-right: 0%;
     margin-bottom: 1px;
+    max-height: 900px;
   }
 
   .content {
